--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
+server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER;DATABASE_TO_UPPER=false;
-spring.datasource.username=sa
-spring.datasource.password=
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=always
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+
+# MySQL configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service
+spring.datasource.username=root
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
