--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 
 # MySQL configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/user_service
-spring.datasource.username=root
-spring.datasource.password=ThePassword
+spring.datasource.username=kize
+spring.datasource.password=kize
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
